# handset-icon-theme

./: COPYING  ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
128x128/: Makefile.in
128x128/apps/: Makefile.am  Makefile.in
32x32/: Makefile.in
32x32/apps/: Makefile.am  Makefile.in
48x48/: Makefile.in
48x48/apps/: Makefile.am  Makefile.in
64x64/: Makefile.in
64x64/apps/: Makefile.am  Makefile.in
96x96/: Makefile.in
96x96/apps/: Makefile.am  Makefile.in
