AC_PREREQ(2.63)

AC_INIT([MeeGo Handset Icon Theme], [0.0.7])
AC_CONFIG_SRCDIR([64x64/apps/icons-Applications-dialer.png])

AM_INIT_AUTOMAKE([1.9 tar-ustar foreign dist-bzip2 no-dist-gzip])

# Define the toplevel path here
AC_SUBST(themedir, "\${datadir}/icons/")

AC_CONFIG_FILES([
Makefile
32x32/Makefile
32x32/apps/Makefile
48x48/Makefile
48x48/apps/Makefile
64x64/Makefile
64x64/apps/Makefile
96x96/Makefile
96x96/apps/Makefile
128x128/Makefile
128x128/apps/Makefile
])

AC_OUTPUT

